# atrea

./: .gitignore  .vale.ini  LICENSE  README.md  db_format.sql
atrea-webui/: API.md  Cargo.toml  Dockerfile  PLUGINS.md  Rocket.toml  a.todotxt  docker-build.sh  docker-run.sh
atrea-webui/plugins/alejo_pronouns/: box_channel.js  meta.json
atrea-webui/plugins/algorithm_archive/: bcal1v1.sql  bcal2v1_plus_vixen2.sql  brta1.sql  meta.json  rava2.sql
atrea-webui/plugins/commander_root_links/: box_channel.js  meta.json
atrea-webui/plugins/funny_algorithms/: meta.json  random.sql
atrea-webui/plugins/ganymede/: box_channel.css  box_channel.js  meta.json
atrea-webui/plugins/grayscale_unfocused/: index.css  meta.json
atrea-webui/plugins/is_live/: box_recs.js  meta.json
atrea-webui/plugins/matrix_rain/: index.js
atrea-webui/plugins/nav_on_root/: index.css  index.js  meta.json
atrea-webui/plugins/pronoundb/: box_channel.js  meta.json
atrea-webui/plugins/rounded_profile_pictures/: box_recs.css  meta.json
atrea-webui/plugins/socialblade_link/: box_channel.js  meta.json
atrea-webui/plugins/sullygnome_link/: box_channel.js  meta.json
atrea-webui/plugins/twitchemotes_link/: box_channel.js  meta.json
atrea-webui/plugins/twitchtracker/: box_channel.js  meta.json
atrea-webui/src/: ai_training_data.rs  api_channel.rs  api_graph.rs  api_plugins.rs  api_raids.rs  api_recs.rs  api_shoutouts.rs  api_viewers.rs  frontend.rs  lib.rs  main.rs  recommender.rs
atrea-webui/src/html/: algorithm_overview_iframe.html  atrea.js  biglist.css  box_channel.html  box_channel.js  (+24 more)
(+39 files in other folders)
