[package]
name = "atrea-webui"
version = "0.7.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5", default-features = false, features = ["json"]}
rocket_db_pools = {version = "0.2", default-features = false, features = ["sqlx_sqlite"]}
serde_json = {version = "1.0", default-features = false}

#[dependencies.sqlx]
#version = "0.7.4"
#default-features = false
#features = ["migrate", "macros"]
